--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;700&display=swap&display=swap"></noscript>
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Inter+Tight:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter+Tight:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=iJwdps"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=iJwdps" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=YLRsCl"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=YLRsCl" type="text/css">
 
   
   
@@ -201,7 +201,7 @@
                     <div class="item-content">
                         <p class="mbr-text mbr-fonts-style display-7">Počnite sa osnovnim funkcijama za upravljanje pacijentima i zakazivanje pregleda.</p>
                     </div>
-                    <div class="mbr-section-btn item-footer"><a href="" class="btn item-btn btn-primary display-7">Istraži Plan</a></div>
+                    <div class="mbr-section-btn item-footer"><a href="" class="btn item-btn btn-black display-7">Istraži Plan</a></div>
                 </div>
             </div>
             <div class="item features-without-image col-12 col-md-6 col-lg-4 item-mb">
@@ -217,7 +217,7 @@
                     <div class="item-content">
                         <p class="mbr-text mbr-fonts-style display-7">Otključajte napredne alate za besprekorno praćenje medicinske istorije pacijenata i planiranje pregleda.</p>
                     </div>
-                    <div class="mbr-section-btn item-footer"><a href="" class="btn item-btn btn-primary display-7">Istraži Plan</a></div>
+                    <div class="mbr-section-btn item-footer"><a href="" class="btn item-btn btn-black display-7">Istraži Plan</a></div>
                 </div>
             </div>
 
@@ -236,7 +236,7 @@
                     <div class="item-content">
                         <p class="mbr-text mbr-fonts-style display-7">Odaberite našu najkompletniju opciju, uključujući ekskluzivne pogodnosti i prioritetnu podršku.</p>
                     </div>
-                    <div class="mbr-section-btn item-footer"><a href="" class="btn item-btn btn-primary display-7">Istraži Plan</a></div>
+                    <div class="mbr-section-btn item-footer"><a href="" class="btn item-btn btn-black display-7">Istraži Plan</a></div>
                 </div>
             </div>
         </div>
@@ -255,7 +255,7 @@
 					<div class="card-box align-center">
 						<h1 class="card-title mbr-fonts-style mb-4 display-1"><strong>Revulucionizujte svoju medicinsku praksu danas!</strong></h1>
 						<p class="mbr-text mbr-fonts-style mb-4 display-7">Pridružite se budućnosti zdravstvene nege uz MedLink sofisticiran softver za upravljanje pacijentima i zakazivanje pregleda.</p>
-						<div class="mbr-section-btn mt-4"><a class="btn btn-primary display-7" href="index.html#contact-form-3-uaChoEiIRl">Započnite Odmah</a></div>
+						<div class="mbr-section-btn mt-4"><a class="btn btn-black display-7" href="index.html#contact-form-3-uaChoEiIRl">Započnite Odmah</a></div>
 					</div>
 				</div>
 			</div>
@@ -484,7 +484,7 @@
         </div>
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="fXvPmOPv2NQBn0J7OCjeo5Y501mVxQ3hTKSjle1SslprEi0ZhT6VutQVsCzzDmF1q3a0gSXs57AUfN+OH1oeS6+BGW/2WhnRYpNYc+5l4rkB3Bck/fCzwyYr0XniUFzH">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="SAsXleQefOukYke837R9/u6B8Olt9rMTJTyGGkTEv9mkUqjkN/5WOMFFnZHwUGb4117Qr6Luk/XQRAaLDwOWve4g1mxdOeC7thQDS/Gw3Milfuhq9Jw6RkjDNABVZoD8">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Hvala na poslatoj poruci</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -493,7 +493,7 @@
                     </div>
                     <div class="dragArea row">
                         <div class="col-md col-sm-12 form-group mb-3" data-for="name">
-                            <input type="text" name="name" placeholder="Ime" data-form-field="name" class="form-control" value="" id="name-contact-form-3-uaChoEiIRl">
+                            <input type="text" name="name" placeholder="Ime klinike" data-form-field="name" class="form-control" value="" id="name-contact-form-3-uaChoEiIRl">
                         </div>
                         <div class="col-md col-sm-12 form-group mb-3" data-for="email">
                             <input type="email" name="email" placeholder="E-mail" data-form-field="email" class="form-control" value="" id="email-contact-form-3-uaChoEiIRl">
@@ -504,7 +504,7 @@
                         <div class="col-12 form-group mb-3" data-for="textarea">
                             <textarea name="textarea" placeholder="Poruka" data-form-field="textarea" class="form-control" id="textarea-contact-form-3-uaChoEiIRl"></textarea>
                         </div>
-                        <div class="col-lg-12 col-md-12 col-sm-12 align-center mbr-section-btn"><button type="submit" class="btn btn-primary display-7">Pošalji Zahtev</button></div>
+                        <div class="col-lg-12 col-md-12 col-sm-12 align-center mbr-section-btn"><button type="submit" class="btn btn-black display-7">Pošalji Zahtev</button></div>
                     </div>
                 </form>
             </div>
@@ -610,7 +610,7 @@
             </div>
         </div>
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/2196761" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/offline-website-builder.html">Offline Website Software</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/web/assets/cookies-alert-plugin/cookies-alert-core.js"></script>  <script src="assets/web/assets/cookies-alert-plugin/cookies-alert-script.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/mbr-switch-arrow/mbr-switch-arrow.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/2196761" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/ai-website-maker.html">Best AI Website Maker</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/web/assets/cookies-alert-plugin/cookies-alert-core.js"></script>  <script src="assets/web/assets/cookies-alert-plugin/cookies-alert-script.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/mbr-switch-arrow/mbr-switch-arrow.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
   
   
 <input name="cookieData" type="hidden" data-cookie-cookiesAlertType='1' data-cookie-customDialogSelector='null' data-cookie-colorText='#424a4d' data-cookie-colorBg='rgb(255, 255, 255)' data-cookie-opacityOverlay='0' data-cookie-bgOpacity='100' data-cookie-textButton='U REDU' data-cookie-rejectText='REJECT' data-cookie-colorButton='#7787a5' data-cookie-rejectColor='#ffffff' data-cookie-colorLink='#424a4d' data-cookie-underlineLink='true' data-cookie-text="Koristimo kolačiće kako bismo vam pružili najbolje iskustvo. Pročitajte našu <a href='privacy.html'>politiku kolačića</a>.">
