--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;700&display=swap&display=swap"></noscript>
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Inter+Tight:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter+Tight:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=CjJMfJ"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=CjJMfJ" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=oNEQ5k"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=oNEQ5k" type="text/css">
 
   
   
@@ -250,13 +250,13 @@
             <div class="col-12 content-head">
                 <div class="mbr-section-head mb-5">
                     <h3 class="mbr-section-title mbr-fonts-style align-center mb-0 display-2"><strong>Zakažite Prezentaciju&nbsp;</strong></h3>
-                    <h4 class="mbr-section-subtitle mbr-fonts-style align-center mb-0 mt-4 display-7">Besplatna uvodna 30 minutna online prezentacija MedLink rešenja</h4>
+                    <h4 class="mbr-section-subtitle mbr-fonts-style align-center mb-0 mt-4 display-7">Besplatna uvodna online prezentacija MedLink rešenja. Trajanje: 30 minuta</h4>
                 </div>
             </div>
         </div>
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="Y/hQ39eCarE6eg1kwN6VmBpDfRX6TZbzQnRj/WzveTNona81yQZde6o6gwxI9ohVQDUKBSaIymy/Ik/CmISGxFnh3XyZYYmernHYBcI4gQIVFrQIaroE/v8h6MBDoEPe">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="r6zdL3/8ctYEYTRuMKpAyGC57BfcspT3ZmuuIfbCMtMGbP2R4KLv9AMuccMrGU5zzh0JRvSI0K/cbJRxYeEk9r4dXjEGPjK5WbxeyZonjehtQc7szVNSaM0reIjq+0MS">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Hvala na poslatoj poruci</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -303,8 +303,7 @@
                 <div class="item-wrapper">
                     <div class="item-head">
                         <h5 class="item-title mbr-fonts-style mb-0 display-5">
-                            <strong>Basic Plan</strong>
-                        </h5>
+                            <strong>Basic Plan</strong></h5>
                         <h6 class="item-subtitle mbr-fonts-style mt-0 mb-0 display-7">
                             <strong>RSD 4830,00&nbsp;</strong>/ ordinacija / mesečno</h6>
                     </div>
@@ -318,8 +317,7 @@
                 <div class="item-wrapper">
                     <div class="item-head">
                         <h5 class="item-title mbr-fonts-style mb-0 display-5">
-                            <strong>Pro Plan</strong>
-                        </h5>
+                            <strong>Standard Plan</strong></h5>
                         <h6 class="item-subtitle mbr-fonts-style mt-0 mb-0 display-7"><strong>RSD 6180,00</strong> / ordinacija / mesečno</h6>
                     </div>
                     <div class="item-content">
@@ -334,9 +332,7 @@
             <div class="item features-without-image col-12 col-md-6 col-lg-4 item-mb">
                 <div class="item-wrapper">
                     <div class="item-head">
-                        <h5 class="item-title mbr-fonts-style mb-0 display-5">
-                            <strong>Ultimate Plan</strong>
-                        </h5>
+                        <h5 class="item-title mbr-fonts-style mb-0 display-5"><span style="font-size: 19.2px;"><strong>Professional</strong></span><strong>&nbsp;Plan</strong></h5>
                         <h6 class="item-subtitle mbr-fonts-style mt-0 mb-0 display-7">
                             <strong>RSD 7320,00&nbsp;</strong>/<strong> </strong>ordinacija / mesečno</h6>
                     </div>
@@ -550,7 +546,7 @@
             </div>
         </div>
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/2196761" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/html-builder.html">HTML Website Generator</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/mbr-switch-arrow/mbr-switch-arrow.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/2196761" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/offline-website-builder.html">Offline Website Builder</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/mbr-switch-arrow/mbr-switch-arrow.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
   
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
