--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;700&display=swap&display=swap"></noscript>
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Inter+Tight:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter+Tight:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=pXf0r6"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=pXf0r6" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=KnWq2j"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=KnWq2j" type="text/css">
 
   
   
@@ -256,7 +256,7 @@
         </div>
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="yrGLhHJZBuFmlLzGHW3uwpGLOvV2ZWRZbIrILzs+nACVx2K9gg+/bOboG9iEPNDUeAuzk4An5CzOhqqZSmtieGAVshaNqynvzytoZzH7uk2BjXMAMUtP0Bp4B18gvzJq">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="B4/6P1n31Nc7Z9wjUlMSuKNFSULiBX9RhlFBoUNEb7b/NYFfZ7b9FP9qErwzxibO8qeiPZX7NRvTU2iTYMdnUk57Cujbpv0+PSUftnGBhgzaRIUUWf6N7I58/DPOKppC">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Poštovani,
 
@@ -274,13 +274,11 @@ Medlink tim</div>
                             <input type="text" name="name" placeholder="Ime Klinike" data-form-field="name" class="form-control" value="" id="name-contact-form-3-uaChoEiIRl">
                         </div>
                         <div class="col-md col-sm-12 form-group mb-3" data-for="email">
-                            <input type="email" name="email" placeholder="E-mail adresa" data-form-field="email" class="form-control" value="" id="email-contact-form-3-uaChoEiIRl">
+                            <input type="email" name="email" placeholder="E-mail Adresa" data-form-field="email" class="form-control" value="" id="email-contact-form-3-uaChoEiIRl">
                         </div>
-                        <div class="col-12 form-group mb-3 mb-3" data-for="url">
-                            <input type="url" name="url" placeholder="Kontakt Telefon" data-form-field="url" class="form-control" value="" id="url-contact-form-3-uaChoEiIRl">
-                        </div>
+                        
                         <div class="col-12 form-group mb-3" data-for="textarea">
-                            <textarea name="textarea" placeholder="Kratak opis klinike kao i termin koji bi vam odgovarao za prezentaciju" data-form-field="textarea" class="form-control" id="textarea-contact-form-3-uaChoEiIRl"></textarea>
+                            <textarea name="textarea" placeholder="Molimo dostavite: termin koji bi vam odgovarao, kontakt telefon" data-form-field="textarea" class="form-control" id="textarea-contact-form-3-uaChoEiIRl"></textarea>
                         </div>
                         <div class="col-lg-12 col-md-12 col-sm-12 align-center mbr-section-btn"><button type="submit" class="btn btn-primary display-7"><span class="mobi-mbri mobi-mbri-chat mbr-iconfont mbr-iconfont-btn"></span>Pošalji Poruku</button></div>
                     </div>
@@ -551,7 +549,7 @@ Medlink tim</div>
             </div>
         </div>
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/2196761" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/drag-drop-website-builder.html">Drag and Drop Website Builder</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/mbr-switch-arrow/mbr-switch-arrow.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/2196761" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/ai-website-maker.html">Best AI Website Maker</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/mbr-switch-arrow/mbr-switch-arrow.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
   
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
